<resources>
    <string name="app_name" translatable="false">Real Estate Manager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="loan_simulator">Loan Simulator</string>
    <string name="menu_property">Property</string>
    <string name="menu_map">Map</string>
    <string name="menu_setting">Setting</string>
    <string name="detail">Detail</string>
    <string name="create_and_modified_property">Create or Modify Property</string>
    <string name="create_home_fabButton">create home fab button</string>
    <string name="detail_screen_error"> Error while loading detail screen</string>


    <!-- name agents -->
    <string-array name="agent_names">
        <item>Agent 1</item>
        <item>Agent 2</item>
        <item>Agent 3</item>
    </string-array>

    <string-array name="type_property">
        <item>House</item>
        <item>Duplex</item>
        <item>Penthouse</item>
        <item>Flat</item>
        <item>Manor</item>
        <item>Villa</item>
    </string-array>

    <!-- create View -->
    <string name="sold_textview">Sold :</string>
    <string name="type_property_select">Select a type of property</string>
    <string name="property_address_hint">Address</string>
    <string name="description_property">description property</string>
    <string name="select_agent">Select agent</string>
    <string name="import_picture_button">Import Picture</string>
    <string name="take_picture_button">Take Picture</string>
    <string name="create_button">Create Property</string>
    <string name="sold">Sold</string>
    <string name="empty">Empty</string>
    <string name="success">Success</string>
    <string name="school">School</string>
    <string name="shop">Shop</string>
    <string name="park">Park</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="restaurant">Restaurant</string>
    <string name="transport">Transport</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="price_in">Price in $</string>
    <string name="surface_in_m">Surface in m²</string>
    <string name="room_number">Room number</string>
    <string name="bedroom_number">Bedroom number</string>
    <string name="interest">Interest</string>
    <string name="static_google_map">static google map</string>
    <string name="modify">Modify</string>
    <string name="image_surface">image surface</string>
    <string name="image_number_of_room">image number of room</string>
    <string name="image_number_of_bedroom">image number of bedroom</string>
    <string name="image_location">image location</string>
    <string name="description">Description</string>
    <string name="number_of_rooms">Number of rooms</string>
    <string name="surface">Surface</string>
    <string name="number_of_rooms_text">Number of rooms</string>
    <string name="number_of_bedroom">Number of bedrooms</string>
    <string name="location">Location</string>
    <string name="media">Media</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="characteristics">Characteristics</string>
    <string name="rooms">Rooms</string>
    <string name="bedrooms">Bedrooms</string>
    <string name="address">Address</string>


    <!-- type property -->
    <string name="house">house</string>
    <string name="duplex">duplex</string>
    <string name="penthouse">penthouse</string>
    <string name="flat">flat</string>
    <string name="manor">manor</string>
    <string name="villa">villa</string>
    <string name="other">other</string>


    <string name="Select_picture">Select a photo</string>
    <string name="Add_the_photo_via_the_gallery">Add the photo via the gallery</string>
    <string name="Take_a_photo">Take a photo</string>
    <string name="Add_the_photo_via_the_camera">Add the photo via the camera</string>
    <string name="Property_successfully_created">Property successfully created!</string>
    <string name="Property_successfully_updated">Property successfully updated!</string>
    <string name="Failed_to_create_the_property">Failed to create the property.</string>
    <string name="Create_Property">Create Property</string>
    <string name="Edit_Property">Edit Property</string>
    <string name="Property_type">Property type</string>
    <string name="Price">Price</string>
    <string name="photo">Photo</string>
    <string name="delete">delete</string>
    <string name="Please_add_at_least_one_photo">Please add at least one photo.</string>
    <string name="Save">Save</string>
    <string name="context_is_not_an_activity">Context is not an Activity</string>

    <!-- Filtre Screen -->
    <string name="min_price">Min Price</string>
    <string name="max_price">Max Price</string>
    <string name="min_surface">Min Surface</string>
    <string name="max_surface">Max Surface</string>
    <string name="property_attribute">Property attribute</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="applied">Applied</string>
    <string name="item_image">Item Image</string>
    <string name="no_property_available">No property available</string>

    <!-- Loan Simulator Screen -->
    <string name="loan_amount">Loan Amount</string>
    <string name="duration_month">Duration (month)</string>
    <string name="rate">Rate (%)</string>
    <string name="calculate">Calculate</string>
    <string name="payment">Payment</string>
    <string name="monthly_payment">Monthly Payment</string>
    <string name="annually_payment">Annually Payment</string>
    <string name="cost_of_loan">Cost of Loan</string>

    <!-- Navigation Screen -->
    <string name="add_property">Add Property</string>
    <string name="edit_property">Edit Property</string>
    <string name="filter">Filter</string>

    <!-- Setting Screen -->
    <string name="choose_your_currency">Choose your currency</string>
    <string name="agent">Agent</string>
    <string name="current_exchange_rate_of_the_dollar_euro">Current exchange rate of the dollar/euro</string>
    <string name="exchange_rate">Exchange rate</string>


</resources>