<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_list_property"
            android:icon="@drawable/baseline_home_work_24"
            android:title="@string/menu_property" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/baseline_map_24"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_loan"
            android:icon="@drawable/baseline_price_check_24"
            android:title="@string/menu_loan_simulator" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/menu_setting"/>
    </group>
</menu>