<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:fillViewport="true"
    android:focusableInTouchMode="true"
    style="@style/Theme.RealEstateManager"
    tools:context=".ui.detail.DetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <!-- Media Section -->

            <TextView
                android:id="@+id/item_sold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/item_test_property_margin"
                android:layout_marginTop="8dp"
                android:maxLines="1"
                android:text="@string/sold"
                android:textColor="@color/sold_item"
                android:textSize="@dimen/text_size_type_property"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/textView_location_title"
                app:layout_constraintTop_toBottomOf="@+id/textView_location_title"
                tools:text="790 Park Avenue apt 6/7A New York NY 10021 United States" />

            <TextView
                android:id="@+id/textView_location_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/location"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/imageView_location"
                app:layout_constraintTop_toTopOf="@+id/imageView_location" />

            <TextView
                android:id="@+id/textView_bedroom"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_margin="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="@+id/textView_bedroom_title"
                app:layout_constraintTop_toBottomOf="@+id/textView_bedroom_title"
                tools:text="2" />

            <TextView
                android:id="@+id/textView_bedroom_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/number_of_bedroom"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/imageView_number_bedroom"
                app:layout_constraintTop_toTopOf="@+id/imageView_number_bedroom" />

            <TextView
                android:id="@+id/textView_room"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_margin="8dp"
                android:layout_marginTop="21dp"
                app:layout_constraintStart_toStartOf="@+id/textView_room_title"
                app:layout_constraintTop_toBottomOf="@+id/textView_room_title"
                tools:text="8" />

            <TextView
                android:id="@+id/textView_surface_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/surface"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/imageView_surface"
                app:layout_constraintTop_toTopOf="@+id/imageView_surface" />

            <TextView
                android:id="@+id/textView_room_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/number_of_rooms"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/imageView_number_of_room"
                app:layout_constraintTop_toTopOf="@+id/imageView_number_of_room" />

            <TextView
                android:id="@+id/textView_media"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/media"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_media"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:scrollbars="horizontal"
                app:layout_constraintStart_toStartOf="@+id/textView_media"
                app:layout_constraintTop_toBottomOf="@+id/textView_media" />

            <!-- Description Section -->
            <TextView
                android:id="@+id/textView_description_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/description"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recycler_view_media" />

            <TextView
                android:id="@+id/textView_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView_description_title"
                tools:layout_editor_absoluteX="8dp"
                tools:text="Anchored by a vast marble gallery..." />

            <ImageView
                android:id="@+id/imageView_surface"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:contentDescription="@string/image_surface"
                android:src="@drawable/baseline_surface_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_description" />

            <ImageView
                android:id="@+id/imageView_number_bedroom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:contentDescription="@string/image_number_of_bedroom"
                android:src="@drawable/baseline_bedroom_24"
                app:layout_constraintStart_toStartOf="@+id/imageView_number_of_room"
                app:layout_constraintTop_toBottomOf="@+id/textView_room" />

            <ImageView
                android:id="@+id/imageView_number_of_room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:contentDescription="@string/image_number_of_room"
                android:src="@drawable/baseline_home_24"
                app:layout_constraintStart_toStartOf="@+id/imageView_surface"
                app:layout_constraintTop_toBottomOf="@+id/textView_surface" />

            <ImageView
                android:id="@+id/imageView_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:contentDescription="@string/image_location"
                android:src="@drawable/baseline_location_pin_24"
                app:layout_constraintBottom_toBottomOf="@+id/imageView_surface"
                app:layout_constraintStart_toEndOf="@+id/textView_room_title"
                app:layout_constraintTop_toTopOf="@+id/imageView_surface"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/imageView_static_map"
                android:layout_width="match_parent"
                android:layout_height="164dp"
                android:layout_marginTop="24dp"
                android:contentDescription="@string/static_google_map"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_bedroom"
                tools:src="@tools:sample/backgrounds/scenic" />

            <TextView
                android:id="@+id/textView_surface"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_margin="8dp"
                tools:text="750 m"
                app:layout_constraintStart_toStartOf="@+id/textView_surface_title"
                app:layout_constraintTop_toBottomOf="@+id/textView_surface_title" />

            <Button
                android:id="@+id/imageButton_modify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.Material3.Button.Icon"
                android:text="@string/modify"
                app:icon="@drawable/baseline_edit_24"
                app:layout_constraintStart_toStartOf="@+id/textView_location"
                app:layout_constraintTop_toTopOf="@+id/textView_bedroom_title" />

            <!-- Info Section -->
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</ScrollView>